--- a/ZxingScan/src/main/res/values/strings.xml
+++ b/ZxingScan/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="hello">Hello World, BarCodeTestActivity!</string>
     <string name="app_name">BarCodeTest</string>
 
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
