--- a/pink_lbs_test/src/main/res/values/strings.xml
+++ b/pink_lbs_test/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LBS</string>
+    <string name="app_name">pink_lbs_test</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
