--- a/pink_lbs_test/src/main/res/values/strings.xml
+++ b/pink_lbs_test/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_net_and_gps">NetAndGPSActivity</string>
+    <string name="title_activity_fence1_0">FenceActivity</string>
 </resources>
